# big_data_team_Wittgenstein

./: .gitignore
docs/: coursework one.md  (+1 more)
team_wittgenstein/coursework_one/: .coverage  README.md  main.py  pyproject.toml
team_wittgenstein/coursework_one/config/: conf.yaml
team_wittgenstein/coursework_one/docs/: architecture.rst  usage.rst
team_wittgenstein/coursework_one/modules/db/: db_connection.py
team_wittgenstein/coursework_one/modules/input/: data_collector.py
team_wittgenstein/coursework_one/modules/output/: data_writer.py
team_wittgenstein/coursework_one/modules/processing/: company_filter.py  data_validator.py
team_wittgenstein/coursework_one/sql/: create_schema.sql
team_wittgenstein/coursework_one/tests/: conftest.py  test_data_collector.py  test_data_validator.py  test_data_writer.py  test_db_connection.py  test_e2e.py  test_main.py
team_wittgenstein/coursework_one/tests/test_data_collector/: test_edgar.py  test_fundamentals.py  test_simfin.py
team_wittgenstein/coursework_two/: .flake8  README.md  main.py  pyproject.toml  smoke_test_liquidity.py
team_wittgenstein/coursework_two/config/: conf.yaml
team_wittgenstein/coursework_two/dashboard/: Home.py
team_wittgenstein/coursework_two/dashboard/lib/: charts.py  db.py  format.py  queries.py  theme.py
team_wittgenstein/coursework_two/dashboard/pages/: 1_Performance.py  2_Compare_Scenarios.py  3_Strategy_Tuner.py  4_Portfolio_Composition.py  5_Stock_Deep_Dive.py
team_wittgenstein/coursework_two/docs/source/: dashboard.md  usage.rst
team_wittgenstein/coursework_two/sql/: create_cw2_tables.sql
team_wittgenstein/coursework_two/tests/: test_data_writer.py  test_liquidity_filter.py  test_metrics.py  test_position_builder.py  test_ratios.py  test_sensitivity.py  test_zscore.py
(+15 files in other folders)
