[tool.poetry]
name = "coursework-one"
version = "0.1.0"
description = "Big Data in Quantitative Finance - Coursework One: Data Pipeline for 130/30 Multi-Factor Equity Strategy"
authors = ["Team Wittgenstein"]
readme = "README.md"
packages = [{include = "modules"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9"
pandas = "^2.0"
pymongo = "^4.0"
minio = "^7.0"
pyyaml = "^6.0"
yfinance = "^0.2"
requests = "^2.31"
pyarrow = "^23.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^6.0"
pytest-mock = "^3.0"
flake8 = "^7.0"
black = "^24.0"
sphinx = "^7.0"

[tool.black]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=modules --cov-report=term-missing"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
